# CCraft

./: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.claude/skills/apple-design/: SKILL.md
.serena/: project.yml
apps/devchat/: index.html  package.json  tsconfig.json  vite.config.ts
apps/devchat/src/: App.tsx
apps/devchat/src-tauri/: Cargo.toml  tauri.conf.json
apps/devchat/src-tauri/capabilities/: default.json
apps/devchat/src-tauri/src/: lib.rs  main.rs
apps/devchat/src-tauri/src/commands/: ai.rs  github.rs  mod.rs  snapshot.rs  storage.rs
apps/devchat/src-tauri/src/models/: ai_config.rs  diff.rs  mod.rs  project.rs  session.rs  user_config.rs
apps/devchat/src-tauri/src/services/: ai_client.rs  diff_parser.rs  github_client.rs  mod.rs  project_history.rs  secret_store.rs  session_history.rs  snapshot.rs  snapshot_cache.rs  user_config.rs
apps/devchat/src/components/: AppShell.tsx  BranchSelector.test.tsx  BranchSelector.tsx  StatusPill.tsx
apps/devchat/src/hooks/: useAI.ts
apps/devchat/src/lib/: diffParser.test.ts  diffParser.ts  mockData.ts  patchApply.test.ts  patchApply.ts  promptBuilder.test.ts  promptBuilder.ts  tauri.ts  tauriIcon.test.ts
apps/devchat/src/stores/: aiConfigStore.test.ts  aiConfigStore.ts  (+4 more)
apps/web/: package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: DownloadButton.tsx  SignalField.tsx  SiteFooter.tsx  SiteHeader.tsx
apps/web/content/: site.test.ts  site.ts
docs/: 01-产品设计文档.md  02-交互设计文档.md  03-技术架构文档.md  任务报告.md  任务计划.md  真实功能实现计划.md
(+17 files in other folders)
